src/features/MainPage/StreetcodeSlider/StreetcodeSliderItem/StreetcodeSliderItem.styles.scss
@use "@sass/mixins/_utils.mixins.scss" as mut;
@use "@sass/variables/_variables.colors.scss" as c;
@use "@sass/variables/_variables.fonts.scss" as ft;
@use "@sass/_utils.functions.scss" as f;
@use "@sass/_utils.functions.scss" as *;
@use "@sass/mixins/_vendor.mixins.scss" as vnd;
@use "@app/common/components/CardText/CardText.styles" as textCard;

@keyframes opacity-animation {
    0%    { opacity: 0; }
    100%  { opacity: 1; }
}

.mainPageStreetCodeSlider {
    .itemStreetCodeMainPage {
        @include mut.flexed(row, center, center, wrap);
        @include mut.rem-padded($top: 0px, $right: 0px, $bottom: 0px, $left: 0px);
        @include mut.sized(758px, 400px);
        @include mut.full-rounded(50px);
        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
        line-height: f.pxToRem(23px);
        background-color: c.$pure-white-color;
        margin-left: f.pxToRem(20px);

        @media (min-width: 768px) and (max-width: 1024px) {
            @include mut.sized(266px, 402px);
            margin-bottom: f.pxToRem(20px);
        }

        @media screen and (max-width: 767px) {
            @include mut.sized(310px, 462px);
            margin-left: f.pxToRem(0px);
        }
    }

    .leftSlider {
        @include mut.full-rounded(53px);
        @include mut.sized(294px, 398px);
        flex: 0 0 f.pxToRem(294px);
        background-color: c.$pure-white-color;
        justify-self: flex-start;

        @media (min-width: 768px) and (max-width: 1024px) {
            @include mut.sized(266px, 338px);
        }

        @media screen and (max-width: 767px) {
            @include mut.sized(100%, 398px);
        }
    }

    .leftSliderContent {
        background-color: c.$accented-gray-color;
        border: 22px solid c.$pure-white-color;
        @include mut.full-rounded(50px);
        @include mut.parent-sized();
        @include mut.flex-centered();

        @media (min-width: 768px) and (max-width: 1024px) {
            @include mut.sized(100%, 355px);
        }

        @media screen and (max-width: 767px) {
            @include mut.sized(100%, 414px);
        }
    }

    .skeleton{
        background: #F4F4F4;
        background: linear-gradient(90deg, #F4F4F4 8%, #F9F9F9 18%, #F4F4F4 33%);
        border-radius: 5px;
        background-size: 200% 100%;
        animation: 1.5s shine linear infinite;
    }
    @keyframes shine {
        to {
            background-position-x: -200%;
        }
    }

    .rightSlider {
        box-sizing: border-box;
        @include mut.flexed(column, start, start, nowrap);
        justify-self: flex-end;
        align-self: flex-start;
        max-height: fit-content;
        width: min-content;
        height: f.pxToRem(360px);
        flex: 1 1 auto;
        position: relative;

        @include mut.rem-padded(28px, 0px, 0px, 0px);

        @media screen and (max-width: 1024px) {
            @include mut.rem-padded(6px, 0px, 0px, 0px);
            height: auto;
        }

    }

    .streetcodeMainPageImg {
        margin: auto;
        @include mut.sized(225px, 307px);
        @media (min-width: 768px) and (max-width: 1024px) {
            @include mut.sized(200px, 261px);
            object-fit: contain;
        }

        @media screen and (max-width: 767px) {
            @include mut.sized(240px, 312px);
            object-fit: contain;
        }
    }

    .imgVisible{
        animation: opacity-animation .5s ease-in forwards;
    }

    @include textCard.cardText();
    .cardTextContainer{
        font-size: f.pxToRem(20px);
        @media screen and (max-width: 1024px) {
            font-size: 12px;
        }

        &Title{
            @include mut.with-font(
                            ft.$closer-text-font,
                            $font-weight: 500,
                            $font-size: 36px);
            line-height: pxToRem(40px);

            @media screen and (max-width: 1024px) {
                display: none;
            }
        }

        &SubTitle{
            font-weight: 500;
            @include mut.truncated(1);
            @media screen and (max-width: 1024px) {
               text-align: center;
                color: c.$lighter-black-color;
            }
        }

        &Text{
            font-weight: 300;
            @media screen and (max-width: 1024px) {
                display: none;
            }
        }

        &Button{
            font-weight: 500;
            @media screen and (max-width: 1024px) {
                margin: 0 auto;
            }
        }
    }
}

